kubernetes/rendered/staging/infrastructure/external-secrets/v1_namespace_external-secrets.yaml
# Source: external-secrets-wrapper/templates/Namespace.external-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
